Fix: Resolved Desktop Mode Layout Issue on Mobile Devices

--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 /* young-serif-regular - latin */
 @font-face {
   font-family: 'Young Serif';
-  src: url('assets/fonts/young-serif-v2-latin-regular.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+  src: url('assets/fonts/young-serif-v2-latin-regular.woff2') format('woff2'); 
   font-weight: 400;
   font-style: normal;
   font-display: swap;
@@ -10,7 +10,7 @@
 /* outfit-regular - latin */
 @font-face {
   font-family: 'Outfit';
-  src: url('assets/fonts/outfit-v15-latin-regular.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+  src: url('assets/fonts/outfit-v15-latin-regular.woff2') format('woff2'); 
   font-weight: 400;
   font-style: normal;
   font-display: swap; 
@@ -19,7 +19,7 @@
 /* outfit-600 - latin */
 @font-face {
   font-family: 'Outfit';
-  src: url('assets/fonts/outfit-v15-latin-600.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+  src: url('assets/fonts/outfit-v15-latin-600.woff2') format('woff2'); 
   font-weight: 600;
   font-style: normal;
   font-display: swap; 
@@ -28,7 +28,7 @@
 /* outfit-700 - latin */
 @font-face {
   font-family: 'Outfit';
-  src: url('assets/fonts/outfit-v15-latin-700.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+  src: url('assets/fonts/outfit-v15-latin-700.woff2') format('woff2');
   font-weight: 700;
   font-style: normal;
   font-display: swap;
@@ -101,94 +101,112 @@ textarea, select {
 
 
 body {
-  height: fit-content;
   min-height: 100vh;
   min-height: 100svh;
-  line-height: 1.5;
   background-color: var(--color-slate-900);
   font-family: var(--ff-body);
+  font-size: 1.05rem;
   color: var(--color-stone-600);
-  font-size: 1rem;
-}
-
-.main__illustration {
-  width: 100%;
-  height: 100%;
-  margin: 0;
-  padding: 0;
-}
-
-.main__illustration img {
-  display: block;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
+  line-height: 1.5;
 }
 
 main {
   width: 100%;
-  max-width: 50rem;
+  height: auto;
   background-color: var(--color-white);
-  padding: 0;
-  margin: 0;
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
+}
+
+main img {
+  display: block;
+  max-width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 article {
-  padding: 2rem;
+  padding: clamp(1.5rem, 1vw, 2rem);
 }
+
+.main__content--heading {
+  color: var(--color-stone-900);
+  font-size: clamp(1.8rem, 2.5vw, 2.5rem);
+  font-weight: var(--fw-regular);
+  margin-block-start: 1.5rem;
+  margin-block-end: 1.5rem;
+}
+
 
 main h1, main h2 {
   font-family: var(--ff-heading);
   line-height: 1.1;
-  margin-block-start: 1rem;
-  margin-block-end: 1rem;
   text-wrap: initial;
   letter-spacing: 0.1rem;
 }
 
-.main__heading {
-  color: var(--color-stone-900);
-}
-
-.main__section--heading {
-  color: var(--color-brown-800);
-}
-
-.main__article--container {
-  width: 98%;
+.main__subsection {
   background-color: var(--color-rose-50);
-  margin: 1rem 0.1rem;
-  padding: 1rem 1.5rem;
   border-radius: 0.8rem;
-  line-height: 1.1;
+  margin-block-start: 1.5rem;
+  padding: 1rem 1.7rem;
+  font-weight: var(--fw-regular);
+  word-spacing: 0.1875rem;
 }
 
-.main__article--heading {
+.main__subsection--heading {
   color: var(--color-rose-800);
   font-family: var(--ff-body);
-  font-weight: var(--fw-bold);
+  font-weight: var(--fw-semibold);
   letter-spacing: 0rem;
+  margin-block-start: 0;
+  margin-block-end: clamp(0.8rem, 1vw, 1rem);
 }
 
-.main__section {
-  margin-block-end: clamp(1rem, 1vw, 1.2rem)
+.main__section:not(:last-child) {
+  margin-block-end: clamp(1.5rem, 2vw, 1.8rem);
 }
 
-ol, ul {
-  padding-left: clamp(1rem, 1vw, 1.5rem);
-}
-
-ol li, ul li {
-  padding-left: clamp(0.8rem, 1vw, 1rem);
-}
-
-ol li::marker, ul li::marker {
+h2 {
+  font-size: 1.75rem;
   color: var(--color-brown-800);
-  font-size: large;
-  font-weight: bolder;
+  margin-block-start: clamp(1.5rem, 1.5vw, 2rem);
+  margin-block-end: clamp(1.5rem, 2vw, 1.8rem);
+}
+
+/* == List Styling == */
+li {
+  margin-block-end: 0.8em;
+  line-height: 1.4;
+}
+
+ol {
+  padding-left: 1.5rem;
+}
+
+ol li::marker {
+  color: var(--color-brown-800);
+  font-weight: var(--fw-bold);
+}
+
+ol li {
+  padding-left: 1rem;
+}
+
+ul {
+  padding-left: 0.625rem; /* extra left spacing for the whole UL container */
+}
+
+ul li {
+  list-style: none; /*remove the browswer's default bullet */
+  position: relative;
+  padding-left: 1.875rem; /* space for custom bullet */
+}
+
+ul li::before {
+  content: "▪";       /* the bullet, reliable at any zoom */
+  position: absolute;
+  left: -0.1875rem;         /* position the bullet slightly to the left of the text */
+  color: var(--color-brown-800);       /* your bullet color */
+  font-weight: var(--fw-bold);
 }
 
 hr {
@@ -199,15 +217,24 @@ hr {
 
 table {
   border-collapse: collapse;
-  width: 96%;
+  width: 100%;
   margin: 0.3rem;
   color: var(--color-stone-600);
   font-weight: var(--fw-regular);
 }
 
-tr, td {
+table td {
   border-bottom: 0.0625rem solid var(--color-stone-150);
-  padding: 0.5rem 1.5rem;
+  padding: 1rem 1.5rem;
+}
+
+tbody td:last-child {
+  color: var(--color-brown-800);
+  font-weight: var(--fw-bold);
+}
+
+tbody tr:last-child td {
+  border-bottom: none;
 }
 
 footer {
@@ -227,37 +254,37 @@ footer {
   color: var(--color-stone-100);
 }
 
-@media screen and (min-width: 48rem) {
+
+
+@media screen and (min-width: 43.75rem) {
   body {
     background-color: var(--color-stone-100);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-size: 1rem;
   }
 
   main {
-    width: 40%;
-    min-width: 44rem;
-    height: auto;
+    width: 50%;
+    max-width: 48.5rem;
     background-color: var(--color-white);
-    padding: 2rem;
-    margin: 3rem auto;
+    margin: 1rem;
+    padding: 1.5rem;
     border-radius: 1.5rem;
   }
 
- .main__illustration {
-    width: 100%;
-    min-height: 40vh;
-  }
-
-  .main__illustration img {
-    display: block;
-    width: 100%;
-    height: 100%;
-    border-radius: 0.8rem;
-    object-fit: contain;
+  main img {
+    border-radius: 1.2rem;
   }
 
   article {
+    margin: 0;
     padding: 0;
   }
 
-
+  footer {
+    display: none;
+  }
 }
